--- a/packages/website/index.html
+++ b/packages/website/index.html
@@ -4,9 +4,13 @@
     <meta charset="utf-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Svante Nilsson website" />
-    <link rel="apple-touch-icon" href="/logo192.png" />
+    <meta name="description" content="Svante Nilsson dev website" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
     <link rel="manifest" href="/manifest.json" />
     <title>Svante Nilsson</title>
   </head>
